--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,15 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+    {% with mensajes = get_flashed_messages() %}
+  {% if mensajes %}
+    <script>
+      {% for mensaje in mensajes %}
+        alert("{{ mensaje }}");
+      {% endfor %}
+    </script>
+  {% endif %}
+{% endwith %}
     {% block body %}
     {% endblock %}
 </body>
