--- a/templates/post_detalle.html
+++ b/templates/post_detalle.html
@@ -8,7 +8,7 @@
 <hr>
 <h3>Comentarios:</h3>
 {% for c in post.comentarios %}
-    <p>{{ c.texto }} - <i>{{ c.usuario.nombre }}</i></p>
+    <p>{{ c.texto }} - <i>{{ c.autor.nombre }}</i></p>
 {% else %}
     <p>No hay comentarios aún.</p>
 {% endfor %}
