--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,24 @@
 {% extends 'layout.html' %}
 {% block title %}Blog{% endblock %}
 {% block body %}
-<h1>Publicaciones</h1>
+<h1>Posts</h1>
+
 {% for post in posts %}
-    <h2><a href="{{ url_for('ver_post', post_id=post.id) }}">{{ post.titulo }}</a></h2>
-    <p>{{ post.contenido[:100] }}...</p>
+    <div>
+        <h2>{{ post.titulo }}</h2>
+        <p>
+            <small>
+                Publicado por {{ post.usuario.nombre }} 
+                el {{ post.fecha_creacion.strftime('%d/%m/%Y %H:%M') }} 
+                en {{ post.categoria.nombre }}
+            </small>
+        </p>
+        <p>{{ post.contenido }}</p>
+        <a href="{{ url_for('ver_post', post_id=post.id) }}">Leer más</a>
+    </div>
+    <hr>
 {% else %}
-    <p>No hay publicaciones</p>
+    <p>No hay posts aún.</p>
 {% endfor %}
 {% if session.get("usuario_id") %}
     <p>Hola, {{ session["usuario_nombre"] }} | <a href="{{ url_for('logout') }}">Cerrar sesión</a> | <a href="{{ url_for('nuevo_post') }}">Publicar un Post</a></p>
